XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>

* Bug fix: autocomplition for non-ascii text did not work.
* Main menu and the text editor context menu now have 'open in browser'
  item.
* Main menu and the text editor context menu now have 'downdload and show'
  item.
* Main menu 'tab' now has 'highlight in...' items.
* Bug fix: 'highlight in file system browser' did not work if it was not a
  project file.
* Basic pyflakes support.
* Python .cgi support in outline browser.
* Bash/sh file type recognition added.
* Pylint and other tools support for python .cgi files.
* Bug fix: improper tooltips and text in similarities pylint sections
  if contained html.
* Bug fix: double slashes in full file names when opened via Ctrl+I.
* New feature: access to the project rope settings file via the Project menu.
* Better dialogs for the cases when both the disk version and the buffer
  content were modified and the user closes the tab or saves the tab content.
* New feature: tab context menu and current path label context menu on the
  status bar are extended with copying directory path and copying file name
  options.


2013 Jan 20 Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.8
* Bug fix: running python tidy with settings led to an exception.
* Improvement: focus is moved to the current editor widget automatically when
  it is received by the editor tab widget. Issue #350.
* Improvement: 'highilight in project' and 'highlight in filesystem'
  editor tab context menu added. Issue #258.
* Improvement: better handling the fact that an editing buffer is changed by
  the find-in-files result window. Issue #318.
* New feature: IDE-wide pylintrc support. Issue #344.
* Performance improvement and bug fixes in the file content trees, e.g
  file outline browser, project files browser etc.
* Bug fix: files with national characters with not-recognized type could
  lead to unpredicted behaviour (up to core dumps). Issue #348